[gd_scene load_steps=4 format=2]

[ext_resource path="res://utils/foldout/Foldout.gd" type="Script" id=1]
[ext_resource path="res://utils/foldout/arrow_up.svg" type="Texture" id=2]
[ext_resource path="res://utils/foldout/arrow_down.svg" type="Texture" id=3]

[node name="Foldout" type="VBoxContainer"]
margin_right = 98.0
margin_bottom = 24.0
size_flags_vertical = 0
script = ExtResource( 1 )

[node name="__FoldoutButton__" type="HBoxContainer" parent="."]
margin_right = 98.0
margin_bottom = 24.0
rect_min_size = Vector2( 0, 24 )
size_flags_horizontal = 3

[node name="Title" type="Label" parent="__FoldoutButton__"]
margin_top = 5.0
margin_right = 68.0
margin_bottom = 19.0
size_flags_horizontal = 3
text = "Untitled"

[node name="Separator" type="MarginContainer" parent="__FoldoutButton__"]
margin_left = 72.0
margin_right = 82.0
margin_bottom = 24.0
custom_constants/margin_right = 10

[node name="IconFolded" type="TextureRect" parent="__FoldoutButton__"]
visible = false
margin_left = 86.0
margin_right = 98.0
margin_bottom = 24.0
rect_min_size = Vector2( 12, 12 )
rect_pivot_offset = Vector2( 6, 12 )
size_flags_vertical = 3
texture = ExtResource( 2 )
expand = true
stretch_mode = 6

[node name="IconUnfolded" type="TextureRect" parent="__FoldoutButton__"]
margin_left = 86.0
margin_right = 98.0
margin_bottom = 24.0
rect_min_size = Vector2( 12, 12 )
rect_pivot_offset = Vector2( 6, 12 )
size_flags_vertical = 3
texture = ExtResource( 3 )
expand = true
stretch_mode = 6
